[gd_scene load_steps=13 format=3 uid="uid://b3aocseqros1p"]

[ext_resource type="Script" path="res://game/game.gd" id="1_nrwu7"]
[ext_resource type="AudioStream" uid="uid://sdiktm7vqa6u" path="res://sounds/Songs - Track 09 (Fall).mp3" id="4_r3wlq"]
[ext_resource type="AudioStream" uid="uid://cbt3yew1gsykg" path="res://sounds/Songs - Track 10 (Clear).mp3" id="5_sulwk"]
[ext_resource type="AudioStream" uid="uid://bqbvv06q4kc8i" path="res://sounds/Songs - Track 01 (Katyusha).mp3" id="5_w3xey"]
[ext_resource type="AudioStream" uid="uid://4nc2qmm1o7d4" path="res://sounds/Songs - Track 12 (Score Penalty).mp3" id="6_acqv5"]
[ext_resource type="AudioStream" uid="uid://bvsv8fptn3hmp" path="res://sounds/Songs - Track 14 (Rebirth).mp3" id="7_htmvj"]
[ext_resource type="PackedScene" uid="uid://culyq6edo2el5" path="res://game/piece/piece_game.tscn" id="8_nxvcg"]
[ext_resource type="AudioStream" uid="uid://df84tc8xlonbw" path="res://sounds/Songs - Track 11 (Score Bonus).mp3" id="8_vra7f"]
[ext_resource type="AudioStream" uid="uid://da4p6da1ac1ug" path="res://sounds/Songs - Track 02 (Level Clear).mp3" id="9_b100o"]
[ext_resource type="AudioStream" uid="uid://dgbc1oyw26r3g" path="res://sounds/Songs - Track 03 (Press Start).mp3" id="10_pr5rp"]
[ext_resource type="AudioStream" uid="uid://tku4628sn8i1" path="res://sounds/Songs - Track 15 (Game Over).mp3" id="11_5erct"]
[ext_resource type="AudioStream" uid="uid://dmnqh4fru2cj1" path="res://sounds/Songs - Track 16 (Game Clear).mp3" id="12_anjyj"]

[node name="Game" type="Node2D"]
z_index = -2
scale = Vector2(1.5, 1.5)
script = ExtResource("1_nrwu7")

[node name="PieceGame" parent="." instance=ExtResource("8_nxvcg")]

[node name="Sounds" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_w3xey")

[node name="Fall" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_r3wlq")

[node name="Clear" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_sulwk")

[node name="ClearOneBlock" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_acqv5")

[node name="Rebirth" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_htmvj")

[node name="Bonus" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_vra7f")

[node name="Penalty" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_acqv5")

[node name="ClearJingle" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_b100o")

[node name="PressStart" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_pr5rp")

[node name="GameOver" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("11_5erct")

[node name="GameClear" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("12_anjyj")
